# ai-summarizer

./: Dockerfile  README.md  deploy-local.bash  pyproject.toml  secrets_ai_summarizer.json
.github/workflows/: deploy.yaml  linter.yaml
app/: main.py
app/adapters/: fastapi_adapter.py  gemini_flash_adapter.py  gemini_pro_adapter.py
app/domain/: resumen_service.py
app/ports/: resumidor_port.py
app/utilities/: google_services.py
tests/: test_integration.py  test_resumidor_port.py  test_service.py
